# TraderV1

WalletScarper/: .env.example  .gitignore  Dockerfile  README_RUN.md  docker-compose.yml  install.bat  pyproject.toml  requirements.txt  run.bat  run_once.bat  run_web.bat  smoke_test.bat
WalletScarper/docs/: 01-product-spec.md  02-technical-pipeline.md  03-telegram-ux.md  04-wallet-filtering.md
WalletScarper/docs/V2.0/: HARDENING-PROGRESS-2026-05-16.md
WalletScarper/tests/: test_stage2_foundation.py  test_stage2_legacy_ingestion.py  test_stage2_shadow_readiness_gap_closure.py  test_stage2_source_evidence.py  test_stage2_sprint2_completion.py  test_stage2_sprint3_signal_risk_paper.py  test_stage2_sprint4_parallel_strategy_memory.py  test_stage2_sprint5_hardening_acceptance.py  test_v2_sprint1_agentic_token_wallet_foundation.py  test_v2_sprint2_hermes_orchestrator_paper_shadow_path.py
WalletScarper/walletscarper/: __init__.py  __main__.py  config.py  db.py  http_client.py  logging_utils.py  models.py  scheduler.py
WalletScarper/walletscarper/services/: backfill.py  discovery.py  live_monitor.py  pipeline.py  scoring.py  stage2_bridge.py  stage2_daemon.py  stage2_scanner.py  telegram.py  token_validator.py  trade_store.py  transactions.py  wallet_quality.py  wallet_tracker.py  wallet_trade_poller.py
WalletScarper/walletscarper/sources/: __init__.py  bitquery_corecast.py  dexpaprika.py  dexscreener.py  geckoterminal.py  helius_das.py  openrouter.py  pumpfun.py  solana_rpc.py
WalletScarper/walletscarper/stage2/: __init__.py  clock.py  parallelism.py
(+1170 files in other folders)
